[gd_scene load_steps=2 format=3 uid="uid://a6b7c8d9e0f1"]

[ext_resource type="Script" path="res://src/scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="Control" process_mode=2]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hud")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = -40.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32

[node name="BestLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 300.0
offset_bottom = 0.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24

[node name="PauseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Pause"

[node name="PausePanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBox" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="PausePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"

[node name="ResumeButton" type="Button" parent="PausePanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "Resume"

[node name="HomeButton" type="Button" parent="PausePanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "Home"

[node name="ShareButton" type="Button" parent="PausePanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "Share Score"

